--- a/rentify-ui/src/app/modules/login/login.component.html
+++ b/rentify-ui/src/app/modules/login/login.component.html
@@ -53,7 +53,7 @@
         </form>
         <div class="mt-1 signup-link">
           <span>Don't have an account</span>
-          <a class="font-bold" routerLink="/registration">Signup here!</a>
+          <a class="font-bold" routerLink="/user/registration">Signup here!</a>
         </div>
       </div>
       
